Routing and bootstrapping

--- a/index.html
+++ b/index.html
@@ -5,7 +5,11 @@
     </head>
     <body>
        
+        <front-area></front-area>
+       
         <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.0/angular.min.js"></script>
+        <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.5.0/angular-route.js"></script>
         <script src="js/app.js"></script>
+        <script src="js/controllers.js"></script>
     </body>
 </html>
