--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html ng-app="svendeprove">
 	<head>
-
+		<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
 		<link href='https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700' rel='stylesheet' type='text/css'>
 
 		<link type="text/css" rel="stylesheet" href="less/svendeprove.css">
@@ -14,7 +14,7 @@
 				<span></span>
 				<span></span>
 			</button>
-			<a href="/" class="name"><span>Svendeportfolio</span> af Bjørn Nyborg</a>
+			<a href="/" class="name"><span class="hidden-xs">Svendeportfolio</span> af Bjørn Nyborg</a>
 		</div>
 
 		<nav id="menu">
